# LearnHaskell

./: .gitignore  LICENSE  README.md
problems/calculator/: LICENSE  README.md  calculator.cabal
problems/calculator/app/: Main.hs
problems/calculator/src/: ArgsParser.hs  Notation.hs
problems/calculator/src/Generators/: PrimeGen.hs
problems/calculator/src/Notation/: ReversePolish.hs
problems/calculator/src/Tools/: BlankChopper.hs  Cruncher.hs
problems/calculator/test/: ArgsParserSpec.hs  NotationSpec.hs
problems/calculator/test/Generators/: PrimeGenSpec.hs
problems/calculator/test/Notation/: ReversePolishSpec.hs
problems/calculator/test/Tools/: BlankChopperSpec.hs  CruncherSpec.hs
repl/: baby.hs  fizzBuzz.hs
