name:                calculator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DominikJaniec/LearnHaskell/tree/master/problems/calculator#readme
license:             MIT
license-file:        LICENSE
author:              Dominik Janiec
maintainer:          dominikjaniec@gmail.com
copyright:           2017 Dominik Janiec
category:            program
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArgsParser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , calculator
                     -- Only for Haskero in VS Code
                     , hspec
  default-language:    Haskell2010

test-suite calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ArgsParserSpec
  build-depends:       base
                     , hspec
                     , calculator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DominikJaniec/LearnHaskell
